Fix a bug in ComputeInlineBoxPosition when searching ahead

ComputeInlineBoxPosition has a "search ahead for better match" fixup
that is supposed to do the following:

"When the input position is downstream and visually at the end of a text
node, search for a better text box in the next text node."

However, the implementation is hacky and considers LTR text only.

This patch makes it slightly saner on pure RTL text.

Note: this patch doesn't clean up all issues with the fixup. We may need
to rewrite it after thorough consideration about bidi.

Bug: 883044
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I3a74ac3616d05b4abed45a47ac3d15623f647a89
Reviewed-on: https://chromium-review.googlesource.com/1220689
Reviewed-by: Yoichi Osato <yoichio@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590665}
Former-commit-id: 1de9f3f139721513bf4a015e9c386a7713fd956a